test-crates/duchess-java-tests/tests/rust-to-java/interface_class_mismatch_reflected.stderr
error: error in class `exceptions.DifferentException`: class `exceptions.DifferentException` should be type `class`
 --> tests/ui/interface_class_mismatch_reflected.rs:4:5
  |
4 |     public interface DifferentException { * }
  |     ^^^^^^

error: aborting due to 1 previous error

